# PaperScout

./: LICENSE  README.md  pyproject.toml
docs/: README.md
examples/: example.ipynb
examples/output/: starobinsky_inflation.bib
paperscout/: __init__.py  api.py  bibtex_exporter.py  cite.py  cli.py  inspire_client.py  model.py  query_builder.py  selector.py  service.py  validators.py
paperscout.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_api.py  test_cite.py  test_text_handling.py
