[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperscout"
version = "0.1.0"
description = "Search INSPIRE and export BibTeX results."
requires-python = ">=3.11"

[project.scripts]
paperscout-preview = "paperscout.cli:main_preview"
paperscout-estimate = "paperscout.cli:main_estimate"
paperscout-save = "paperscout.cli:main_save"
paperscout-validate = "paperscout.cli:main_validate"
paperscout-help = "paperscout.cli:main_help"
paperscout-cite = "paperscout.cli:main_cite"

[tool.setuptools]
packages = ["paperscout"]
